--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 style="color:white">Da Crib</h1>
       <img src="https://static.wikia.nocookie.net/gtawiki/images/e/e2/JohnsonHouse-GTASA-Exterior.jpg/revision/latest?cb=20240327154553" height="400" alt="centered image" class="aligncenter">
       <h2 style="color:white">Dance</h2>
-      <img src="file:///H:/Chrome%20Downloads/IMG_6956.JPG" height="400" alt="centered image" class="aligncenter">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_6956.JPG?raw=true" height="400" alt="centered image" class="aligncenter">
       <h2 style="color:white">Ball</h2>
       <img src="file:///H:/Chrome%20Downloads/IMG_0117%20(1).PNG" height="400" alt="centered image" class="aligncenter">
       <h2 style="color:white">M'lady</h2>
