--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body style="background-image: url('https://www.chromethemer.com/wallpapers/chromebook-wallpapers/images/960/y2k-chromebook-wallpaper.jpg');>
   background-size: cover;
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">About Me</a>
+    <a href="./">Home</a>
+    <a href="./porfolio">Portfolio</a>
+    <a href="./aboutme">About Me</a>
     <center>
       <h1 style="color:white">Da Crib</h1>
       <img src="https://static.wikia.nocookie.net/gtawiki/images/e/e2/JohnsonHouse-GTASA-Exterior.jpg/revision/latest?cb=20240327154553" height="400" alt="centered image" class="aligncenter">
