--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <a href="./aboutme">About Me</a>
     <center>
       <h1 style="color:white">Da Crib</h1>
-      <img src="https://static.wikia.nocookie.net/gtawiki/images/e/e2/JohnsonHouse-GTASA-Exterior.jpg/revision/latest?cb=20240327154553" height="400" alt="centered image" class="aligncenter">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/JohnsonHouse-GTASA-Exterior.jpg?raw=true" height="400" alt="centered image" class="aligncenter">
       <h2 style="color:white">Dance</h2>
       <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_6956.JPG?raw=true" height="400" alt="centered image" class="aligncenter">
       <h2 style="color:white">Ball</h2>
-      <img src="file:///H:/Chrome%20Downloads/IMG_0117%20(1).PNG" height="400" alt="centered image" class="aligncenter">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_0117.PNG?raw=true" height="400" alt="centered image" class="aligncenter">
       <h2 style="color:white">M'lady</h2>
-      <img src="file:///H:/Chrome%20Downloads/IMG_9075.JPG" height="400" alt="centered image" class="aligncenter">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_9075.JPG?raw=true" height="400" alt="centered image" class="aligncenter">
    </center>
   <br>
     <h1 style="color:white">Jayce theme song</h1>
