--- a/aboutme.html
+++ b/aboutme.html
@@ -11,28 +11,28 @@
     <center>
     <h1>Here is my life</h1>
     <h2>   Here is me, my sister, and my parents after my football game in 2022</h2>
-     <img src="file:///H:/Chrome%20Downloads/IMG_0132.PNG" height="300">
+     <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_0132.PNG?raw=true" height="300">
     <h3>Me playing football, i've been playing since I was in 1st grade</h3>
-      <img src="file:///H:/Chrome%20Downloads/IMG_4924.PNG" height="300">
-      <img src="file:///H:/Chrome%20Downloads/IMG_0104.JPG" height="300">
-      <img src="file:///H:/Chrome%20Downloads/IMG_0090%20(1).PNG" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_4924.PNG?raw=true" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_0104.JPG?raw=true" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_0090.PNG?raw=true" height="300">
       <br> 
     <h3>Here is me dancing wit my group, Hiva Katoa</h3>
-      <img src="file:///H:/Chrome%20Downloads/IMG_6953.JPG" height="400">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_6953.JPG?raw=true" height="400">
       <br>
     <h3>Me when i was a young lad</h3>
-      <img src="file:///H:/Chrome%20Downloads/IMG_7656.JPG" height="300">
-      <img src="file:///H:/Chrome%20Downloads/IMG_9133.JPG" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_7656.JPG?raw=true" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_9133.JPG?raw=true" height="300">
       <br>
-      <img src="file:///H:/Chrome%20Downloads/IMG_9055.JPG" height="300">
-      <img src="file:///H:/Chrome%20Downloads/IMG_9030.PNG" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_9055.JPG?raw=true" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_9030.PNG?raw=true" height="300">
       <br>
     <h3>Bruce</h3>
-      <img src="file:///H:/Chrome%20Downloads/IMG_7382.JPG" height="300">
+      <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_7382.JPG?raw=true" height="300">
     <br>
     <h2>   Here is m'lady, we've been dating for 12 years!</h2>
-    <img src="file:///H:/Chrome%20Downloads/IMG_8301.PNG" height="300">
-    <img src="file:///H:/Chrome%20Downloads/IMG_0133.JPG" height="300">
+    <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_8301.PNG?raw=true" height="300">
+    <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/IMG_0133.JPG?raw=true" height="300">
     <br>
     </center>
     </a>
