--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
     <h1>This is my Portfolio Page!</h1>
       <img src="images/portfolio.jpg" height="250">
       <br>
-    <h1>   Second day scratch project.</h1>
+    <h1>   1.1.9 Project.</h1>
       <iframe allowtransparency="true" width="485" height="402" 
-        src="//scratch.mit.edu/projects/embed/169750963/?autostart=false" 
+        src="file:///C:/Users/1909767/Pictures/Capture.JPG" 
         frameborder="0" allowfullscreen></iframe>
       <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
