--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       <br>
     <h1>   1.1.9 Project, Make a pizza choosing toppings!</h1>
       <iframe allowtransparency="true" width="485" height="402" 
-        src="file:///C:/Users/1909767/Pictures/Capture.JPG" 
+        src="Capture.jpg" 
         frameborder="0" allowfullscreen></iframe>
       <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
