--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body style="background-image: url('https://www.chromethemer.com/wallpapers/chromebook-wallpapers/images/960/y2k-chromebook-wallpaper.jpg');>
   background-size: cover;
     <a href="./">Home</a>
-    <a href="./porfolio">Portfolio</a>
+    <a href="./portfolio">Portfolio</a>
     <a href="./aboutme">About Me</a>
     <center>
       <h1 style="color:white">Da Crib</h1>
