--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
       <iframe allowtransparency="true" width="485" height="402" 
         src="Capture.jpg" 
         frameborder="0" allowfullscreen></iframe>
-      <br> Here, we were able to create a pizza simulator where the user can input the type of toppings they would like, it will then bake the pizza, plate it, and cut it, serving hot and fresh pizza to the user.</br>
+      <h1> Here, we were able to create a pizza simulator where the user can input the type of toppings they would like, it will then bake the pizza, plate it, and cut it, serving hot and fresh pizza to the user.</h1>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
       <a target="_blank" href="images/DuckHunter.aia">
         <img src="images/duckHunter.JPG" height="300">
