--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
         src="Capture.jpg" 
         frameborder="0" allowfullscreen></iframe>
       <h1> Here, we were able to create a pizza simulator where the user can input the type of toppings they would like, it will then bake the pizza, plate it, and cut it, serving hot and fresh pizza to the user.</h1>
-    <h1>   Using App Inventor to make app game Duck Hunter.</h1>
+    <h1>   1.2.5 Project, Protect the kingdom from lucas and bugs!.</h1>
       <a target="_blank" href="images/DuckHunter.aia">
-        <img src="images/duckHunter.JPG" height="300">
+        <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/game%201%201.jpg?raw=true" height="300">
       </a>
       <br>
     <h1>   Interactive Fiction Rags to Riches.</h1>
