--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,8 @@
     <h1>   1.2.5 Project, Protect the kingdom from lucas and bugs!.</h1>
       <a target="_blank" href="images/DuckHunter.aia">
         <img src="https://github.com/jaycebaun/Jayceistuff/blob/main/game%201%201.jpg?raw=true" height="300">
+	<img src="https://github.com/jaycebaun/Jayceistuff/blob/main/game%202.jpg?raw=true" height="300">
+    <h1>Using different turtle methods and functions, as well as utilizing pygame sound, we were able to make a game with background music and user input within threaded loops. We also had a separate script which held our leaderboard functions holding and updating data in a txtfile</h1>
       </a>
       <br>
     <h1>   Interactive Fiction Rags to Riches.</h1>
